# zamba

./: .dockerignore  .flake8  .gitignore  Dockerfile  HISTORY.md  LICENSE  MAINTAINING.md  MANIFEST.in  Makefile  README.md  appveyor.yml  codeship-services.yml  codeship-steps.yml  env.encrypted  pre-commit.hook  predict_configuration.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  versions.json  zamba-cli-predict-demo.mov
.github/: MAINTAINING.md  codecov.yml  pull_request_template.md
.github/workflows/: docs-latest.yml  docs-master.yml  docs-preview.yml  docs-publish.yml  publish-docs.yml  release.yml  tests.yml
djamba/: cli.py
djamba/models/: io.py  manager.py  model.py  winning_model.py
djamba/preprocess/: preprocess.py
djamba/tests/: conftest.py  test_cli.py  test_sample_model.py
docs/: .gitignore  Makefile  algorithms.md  conf.py  contribute.md  djamba.models.rst  djamba.rst  generate_api_reference.py  hooks.py  image_validation_feature.md  index.rst  install.md  install.rst  make.bat  make_html.sh  mkdocs.yml  modules.rst  publish.sh  quickstart-cli.rst  quickstart.md  requirements.txt  slowstart-cli.md  slowstart-cli.rst  slowstart-lib.md  slowstart-lib.rst  zamba.models.rst  zamba.rst
docs/_static/: zamba_custom.css  zamba_custom.html
docs/docs/: algorithms.md  camtrap-dp.md  changelog.md  cli.md  configurations.md  contribute.md  debugging.md  extra-options.md  images-predict-tutorial.md  images-train-tutorial.md  index.md  index.rst  inputs_outputs.md  install.md  models.md  new_labels.md  predict-tutorial.md  py-package.md  python-tutorial.ipynb  python-tutorial.md  quickstart.md  train-tutorial.md  v2_updates.md  yaml-config.md
loguru/: __init__.py
official_models/european/: events.out.tfevents.1634143630.ip-172-31-5-18.11411.0  events.out.tfevents.1634253708.ip-172-31-5-18.11411.1
official_models/slowfast/: events.out.tfevents.1627984962.ip-172-31-11-162.5273.0
official_models/time_distributed/: events.out.tfevents.1632959410.ip-172-31-43-74.90587.0  events.out.tfevents.1632995742.ip-172-31-43-74.90587.1  predict_configuration.yaml  train_configuration.yaml
requirements-dev/: docs.txt  lint.txt
scripts/: benchmark_video_megadetector.py
src/: cli.py  config.py
src/tests/: conftest.py  test_cli.py  test_model_config.py  test_model_save_and_load.py  test_predict.py  test_predict_cli.py  test_sample_model.py  test_sample_model_create_and_save.py  test_sample_model_load_and_predict.py  tests.py
stable/: 404.html  index.html  objects.inv  sitemap.xml
stable/changelog/: index.html
stable/configurations/: index.html
stable/contribute/: index.html
stable/debugging/: index.html
stable/extra-options/: index.html
stable/images-predict-tutorial/: index.html
stable/install/: index.html
stable/models/: index.html
stable/predict-tutorial/: index.html
stable/quickstart/: index.html
stable/search/: search_index.json
stable/stylesheets/: extra.css
stable/train-tutorial/: index.html
stable/yaml-config/: index.html
templates/: blank_nonblank.yaml  european.yaml  slowfast.yaml  time_distributed.yaml
tests/: conftest.py  create_test_assets.py  test_balanced_sampling.py  test_cli.py  test_config.py  test_datamodule.py  test_densepose.py  test_depth.py  test_determinism.py  test_extras_smoke.py  test_filter_frames.py  test_image_file_handling.py  test_image_validation.py  test_images.py  test_instantiate_model.py  test_load_video_frames.py  test_megadetector_lite_yolox.py  test_metadata.py  test_metrics.py  test_model_manager.py  test_npy_cache.py  test_pytorch_utils.py  test_registry.py  test_zamba_video_classification_lightning_module.py
tests/assets/: labels.csv  labels.json  sample_predict_config.yaml  sample_train_config.yaml
v2.0/: 404.html  index.html  objects.inv  sitemap.xml
v2.0/changelog/: index.html
v2.0/configurations/: index.html
v2.0/contribute/: index.html
v2.0/debugging/: index.html
v2.0/extra-options/: index.html
v2.0/install/: index.html
v2.0/models/: index.html
v2.0/predict-tutorial/: index.html
v2.0/search/: search_index.json
v2.0/train-tutorial/: index.html
v2.0/v2_updates/: index.html
v2.1/: 404.html  index.html  objects.inv  sitemap.xml
v2.1/changelog/: index.html
v2.1/configurations/: index.html
v2.1/contribute/: index.html
v2.1/debugging/: index.html
v2.1/extra-options/: index.html
v2.1/install/: index.html
v2.1/predict-tutorial/: index.html
v2.1/quickstart/: index.html
v2.1/search/: search_index.json
v2.1/train-tutorial/: index.html
v2.1/yaml-config/: index.html
v2.2/: 404.html  index.html  sitemap.xml
v2.2/changelog/: index.html
v2.2/configurations/: index.html
v2.2/contribute/: index.html
v2.2/debugging/: index.html
v2.2/extra-options/: index.html
v2.2/install/: index.html
v2.2/predict-tutorial/: index.html
v2.2/quickstart/: index.html
v2.2/search/: search_index.json
v2.2/train-tutorial/: index.html
v2.2/yaml-config/: index.html
v2.3/: 404.html  index.html  sitemap.xml
v2.3/changelog/: index.html
v2.3/configurations/: index.html
v2.3/contribute/: index.html
v2.3/debugging/: index.html
v2.3/extra-options/: index.html
v2.3/install/: index.html
v2.3/predict-tutorial/: index.html
v2.3/quickstart/: index.html
v2.3/search/: search_index.json
v2.3/train-tutorial/: index.html
v2.3/yaml-config/: index.html
v2.4/: 404.html  index.html  sitemap.xml
v2.4/changelog/: index.html
v2.4/configurations/: index.html
v2.4/contribute/: index.html
v2.4/debugging/: index.html
v2.4/extra-options/: index.html
v2.5/: 404.html  index.html  sitemap.xml
v2.6/: 404.html  index.html  objects.inv  sitemap.xml
v2.7/: 404.html  index.html  objects.inv  sitemap.xml
zamba/: __init__.py  __main__.py  cli.py  config.py  convert_videos.py  exceptions.py  image_cli.py  metrics.py  new_cli.py  settings.py  utils.py  utils_cli.py  version.py  visualization.py
zamba-env/: pyvenv.cfg
zamba_algorithms/: exceptions.py  settings.py
~latest/: 404.html  index.html  objects.inv  sitemap.xml
(+581 files in other folders)
