[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zamba"
version = "2.5.0"
authors = [
  {name = "DrivenData", email = "info@drivendata.org"}
]
description = "Zamba is a command line tool and Python package to identify animals in camera trap videos and train custom models for new species and habitats."
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
  "appdirs",
  "av",
  "cloudpathlib[s3]",
  "ffmpeg-python",
  "future",
  "fvcore",
  "gitpython",
  "loguru",
  "numpy<2.0.0",
  "opencv-python-headless",
  "openpyxl",
  "pandas>=2.0.0",
  "pandas_path",
  "pqdm",
  "pydantic<2.0.0",
  "python-dotenv",
  "pytorch-lightning>=2.0.0",
  "pytorchvideo",
  "scikit-learn",
  "tensorboard",
  "thop",
  "timm",
  "torch",
  "torchinfo",
  "torchvision>=0.10.0",
  "tqdm",
  "typer[all]",
  "yolox @ git+https://github.com/r-b-g-b/YOLOX.git@build-requirements",
]

[project.scripts]
zamba = "zamba.cli:app"

[project.optional-dependencies]
tests = [
  "coverage",
  "Pillow>=9.0.0",
  "pytest",
  "pytest-coverage",
  "pytest-mock",
  "wheel",
]
densepose = [
  "torch",
  "detectron2 @ git+https://github.com/facebookresearch/detectron2.git",
  "detectron2-densepose @ git+https://github.com/facebookresearch/detectron2@main#subdirectory=projects/DensePose"
]

[project.urls]
"Homepage" = "https://github.com/drivendataorg/zamba"
"Documentation" = "https://zamba.drivendata.org/docs/stable/"
"Bug Tracker" = "https://github.com/drivendataorg/zamba/issues"
"Changelog" = "https://github.com/drivendataorg/zamba/blob/master/HISTORY.md"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.venv
  )/
)
'''

[tool.coverage.run]
source = ["zamba"]

[tool.coverage.report]
include = ["zamba/**/*.py"]
omit = ["zamba/**/__*.py"]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "--cov-append --cov=zamba --cov-report=term --cov-report=html --cov-report=xml"
