[metadata]
name = zamba
version = 2.0.2
author = DrivenData
author_email = info@drivendata.org
description = Zamba is a command line tool and Python package to identify animals in camera trap videos and train custom models for new species and habitats.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/drivendataorg/zamba
project_urls =
    Bug Tracker = https://github.com/drivendataorg/zamba/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
install_requires =
    appdirs
    av
    cloudpathlib[s3]
    ffmpeg-python
    future
    fvcore
    gitpython
    importlib_metadata ; python_version < "3.8"
    loguru
    numpy
    opencv-python-headless
    openpyxl
    pandas>1.2.0
    pandas_path
    pydantic
    python-dotenv
    pytorch-lightning
    pytorchvideo @ git+https://github.com/facebookresearch/pytorchvideo
    scikit-learn
    tensorboard
    thop
    timm
    torch
    torchinfo
    torchvision>=0.10.0
    tqdm
    typer[all]
    yolox @ git+https://github.com/r-b-g-b/YOLOX.git@build-requirements

packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    zamba = zamba.cli:app

[options.extras_require]
tests =
    coverage
    Pillow>=9.0.0
    pytest
    pytest-coverage
    pytest-mock
    wheel
densepose =
    detectron2-densepose @ git+https://github.com/facebookresearch/detectron2@main#subdirectory=projects/DensePose

[flake8]
ignore = E203, E501, W503
max-line-length = 99

[mypy]
ignore_missing_imports = True
allow_redefinition = True

[tool:pytest]
testpaths = tests/
addopts = --cov-append --cov=zamba --cov-report=term --cov-report=html --cov-report=xml

[coverage:report]
include = zamba/**.py
